# fastapi_example_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  alembic.ini  main.py  pyproject.toml  worker.py
alembic/: env.py  script.py.mako
alembic/versions/: 11ac00c5cba7_create_user_table.py  240cabdabf3b_create_person_table.py  535cc9cbdd98_create_membership_table.py
app/: main.py  server.py
app/api/: dependencies.py  guards.py
app/api/routes/: auth.py  person.py
app/config/: logging.py  settings.py
app/core/: __init__.py  celery_app.py  di.py  exceptions.py  logging.py  metrics.py  security.py  settings.py  task_names.py  telemetry.py
app/entities/: __init__.py  base.py  membership.py  person.py  user.py
app/inbound/celery/: base.py  person_tasks.py
app/inbound/http/: transaction.py
app/inbound/http/routes/: auth.py  health.py  person.py
app/inbound/websocket/: person_ws.py
app/outbound/channel/: channel.py  ws_channel.py
app/outbound/persistence/db/: db.py  session.py
app/outbound/persistence/repository/: crud_repository.py  membership_repository.py  person_repository.py  user_repository.py
app/outbound/queue/: celery_queue.py  queue.py
app/persistence/db/: db.py  session.py
app/persistence/repository/: base.py  membership_repository.py  person_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  pagination.py  person.py
app/service/: auth_service.py  person_service.py
k8s/: deployment.yaml
tests/: conftest.py  fakes.py  test_app.py  test_auth.py  test_celery_config.py  test_logging.py  test_person_api.py  test_person_overview.py  test_person_repository.py  test_telemetry.py  test_websocket.py
