[tool.poetry]
name = "fast-api-example-app"
version = "0.1.0"
description = ""
authors = ["taiberium <akhmetovrustam1990@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
pydantic-settings = "^2.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
pytest = "^7.4.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
