[tool.poetry]
name = "fast-api-example-app"
version = "0.1.0"
description = ""
authors = ["taiberium <akhmetovrustam1990@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
pydantic-settings = "^2.0.0"
alembic = "^1.18.4"
google-auth = "^2.53.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
requests = "^2.34.2"
email-validator = "^2.3.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
pytest = "^7.4.0"
httpx = "^0.24.0"
ruff = "^0.15.16"
mypy = "^2.1.0"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, C4 comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom calls these in argument defaults — allow it.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true   # jose/google-auth ship without full stubs
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true
